# chess-rs

./: .gitignore  Cargo.toml  bacon.toml  perft.bat
src/: board.rs  engine.rs  icons.rs  lib.rs  main.rs  painting.rs  pieces.rs
src/board/: moves.rs  pieces.rs  positioning.rs
