[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["default", "image", "svg"] }
env_logger = "0.11.3"
lazy-regex = "3.1.0"
log = "0.4.21"
rand = "0.8.5"
